--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>хомяк</title>
 </head>
 <body>
-    сделайте за меня уроки, пожалуйста
+   <img id="hamster" src="image/286-2866453_hamster-01-hamsters-para-dibujar-hd-png-download.png"     alt="Хомяк">
+   
+   <div id="score">Счет: 0</div>
+   <script src="js/main.js"></script>
+ <button id="button">100р</button>
+ <div id="manu">Ваши деньги: 0</div>
+
 </body>
 </html>
